5.0/_sources/lland_v4.rst.txt
.. |ACKER| replace:: :const:`~hydpy.models.lland.lland_constants.ACKER`
.. |BAUMB| replace:: :const:`~hydpy.models.lland.lland_constants.BAUMB`
.. |BODEN| replace:: :const:`~hydpy.models.lland.lland_constants.BODEN`
.. |Calc_NBesInz_V1| replace:: :class:`~hydpy.models.lland.lland_model.Calc_NBesInz_V1`
.. |Calc_NetShortwaveRadiationInz_V1| replace:: :class:`~hydpy.models.lland.lland_model.Calc_NetShortwaveRadiationInz_V1`
.. |Calc_SnowIntRate_V1| replace:: :class:`~hydpy.models.lland.lland_model.Calc_SnowIntRate_V1`
.. |ESnowInz| replace:: :class:`~hydpy.models.lland.lland_states.ESnowInz`
.. |ESnow| replace:: :class:`~hydpy.models.lland.lland_states.ESnow`
.. |EvI| replace:: :class:`~hydpy.models.lland.lland_fluxes.EvI`
.. |EvSInz| replace:: :class:`~hydpy.models.lland.lland_fluxes.EvSInz`
.. |FEUCHT| replace:: :const:`~hydpy.models.lland.lland_constants.FEUCHT`
.. |FLUSS| replace:: :const:`~hydpy.models.lland.lland_constants.FLUSS`
.. |GLETS| replace:: :const:`~hydpy.models.lland.lland_constants.GLETS`
.. |GRUE_E| replace:: :const:`~hydpy.models.lland.lland_constants.GRUE_E`
.. |GRUE_I| replace:: :const:`~hydpy.models.lland.lland_constants.GRUE_I`
.. |LAUBW| replace:: :const:`~hydpy.models.lland.lland_constants.LAUBW`
.. |MISCHW| replace:: :const:`~hydpy.models.lland.lland_constants.MISCHW`
.. |Model.check_waterbalance| replace:: :func:`~hydpy.models.lland_v4.Model.check_waterbalance`
.. |NADELW| replace:: :const:`~hydpy.models.lland.lland_constants.NADELW`
.. |NetRadiationInz| replace:: :class:`~hydpy.models.lland.lland_fluxes.NetRadiationInz`
.. |NetRadiationSnow| replace:: :class:`~hydpy.models.lland.lland_fluxes.NetRadiationSnow`
.. |OBSTB| replace:: :const:`~hydpy.models.lland.lland_constants.OBSTB`
.. |Return_NetLongwaveRadiationInz_V1| replace:: :class:`~hydpy.models.lland.lland_model.Return_NetLongwaveRadiationInz_V1`
.. |Return_WSurfInz_V1| replace:: :class:`~hydpy.models.lland.lland_model.Return_WSurfInz_V1`
.. |SEE| replace:: :const:`~hydpy.models.lland.lland_constants.SEE`
.. |SIED_D| replace:: :const:`~hydpy.models.lland.lland_constants.SIED_D`
.. |SIED_L| replace:: :const:`~hydpy.models.lland.lland_constants.SIED_L`
.. |SInz| replace:: :class:`~hydpy.models.lland.lland_states.SInz`
.. |STInz| replace:: :class:`~hydpy.models.lland.lland_states.STInz`
.. |Sequences.conditions| replace:: :const:`~hydpy.core.sequencetools.Sequences.conditions`
.. |TempSInz| replace:: :class:`~hydpy.models.lland.lland_aides.TempSInz`
.. |VERS| replace:: :const:`~hydpy.models.lland.lland_constants.VERS`
.. |VolBMax| replace:: :class:`~hydpy.models.lland.lland_control.VolBMax`
.. |WASSER| replace:: :const:`~hydpy.models.lland.lland_constants.WASSER`
.. |WATS| replace:: :class:`~hydpy.models.lland.lland_states.WATS`
.. |WAeS| replace:: :class:`~hydpy.models.lland.lland_states.WAeS`
.. |WEINB| replace:: :const:`~hydpy.models.lland.lland_constants.WEINB`
.. |WG2Z| replace:: :class:`~hydpy.models.lland.lland_control.WG2Z`
.. |WG| replace:: :class:`~hydpy.models.lland.lland_fluxes.WG`
.. |WSurfInz| replace:: :class:`~hydpy.models.lland.lland_fluxes.WSurfInz`
.. |WSurf| replace:: :class:`~hydpy.models.lland.lland_fluxes.WSurf`
.. |WaDaInz| replace:: :class:`~hydpy.models.lland.lland_fluxes.WaDaInz`
.. |WaDa| replace:: :class:`~hydpy.models.lland.lland_fluxes.WaDa`
.. |lland_v3| replace:: :mod:`~hydpy.models.lland_v3`
.. |lland_v4| replace:: :mod:`~hydpy.models.lland_v4`

.. _lland_v4:

lland_v4
========

.. automodule:: hydpy.models.lland_v4
    :members:
    :show-inheritance:
    :exclude-members: Self, Reversible, Generic, Sized, Awaitable, IntVar, clear_overloads, TypeAlias, Sequence, Hashable, SenderSequences, SUBMETHODS, SupportsAbs, AnyStr, assert_never, reveal_type, CLASSES, REQUIREDSEQUENCES, ItemsView, Union, SupportsFloat, get_overloads, get_origin, OUTLET_METHODS, NoReturn, no_type_check, Type, Final, PART_ODE_METHODS, RECEIVER_METHODS, Tuple, AbstractSet, ByteString, MappingView, subpars, MutableSequence, MutableSet, SupportsRound, CONTROLPARAMETERS, INLET_METHODS, get_protocol_members, SOLVERSEQUENCES, FrozenSet, no_type_check_decorator, fastaccess_old, Mapping, FIXEDPARAMETERS, seqs, KeysView, SUBMODELS, Protocol, SupportsComplex, SENDER_METHODS, ContextManager, deprecated, SupportsBytes, get_original_bases, Iterator, is_protocol, TypeGuard, DefaultDict, LiteralString, Required, TextIO, TYPE_CHECKING, AsyncContextManager, fastaccess_new, FULL_ODE_METHODS, SOLVERPARAMETERS, BinaryIO, fastaccess, runtime, IO, Text, TypeVarTuple, ValuesView, AsyncIterable, Generator, Optional, assert_type, Literal, dataclass_transform, subvars, pars, get_args, ParamSpec, Annotated, cast, final, subseqs, ClassVar, Any, Unpack, Coroutine, is_typeddict, Counter, UPDATEDSEQUENCES, Callable, Dict, NamedTuple, overload, OrderedDict, Set, ADD_METHODS, Collection, Pattern, List, get_type_hints, Concatenate, ParamSpecKwargs, DERIVEDPARAMETERS, AsyncGenerator, override, Container, RUN_METHODS, NotRequired, NewType, RESULTSEQUENCES, SupportsInt, Buffer, Iterable, TypeVar, SupportsIndex, MutableMapping, ChainMap, FactorSequences, ForwardRef, TypeAliasType, AsyncIterator, Never, ParamSpecArgs, Match, Deque, TypedDict, ReceiverSequences, runtime_checkable
